--- a/slider-def.css
+++ b/slider-def.css
@@ -13,7 +13,7 @@
   to{left:0;}
 }
 .slides{
-  width:400%;
+  width:500%;
   height:100%;
   position:relative;
   -webkit-animation:slide 40s infinite; /* timer slider */
@@ -21,7 +21,7 @@
   animation:slide 40s infinite; /* timer slider */
 }
 .slider{
-  width:25%;
+  width:20%;
   height:100%;
   float:left;
   position:relative;
@@ -48,7 +48,7 @@
 /* Legend */
 .legend{
   border:500px solid transparent;
-  border-left:800px solid #222222e3;
+  border-left:800px solid #0000004f;
   border-bottom:0;
   position:absolute;
   bottom:0;
@@ -67,9 +67,9 @@
   float:left;
   position:relative;
   top:350px;
-  -webkit-animation:content-s 10s infinite;
-  -moz-animation:content-s 10s infinite;
-  animation:content-s 10s infinite; /* harus seperempat s dari animation .slides */ 
+  -webkit-animation:content-s 12s infinite;
+  -moz-animation:content-s 12s infinite;
+  animation:content-s 12s infinite; /* harus seperempat s dari animation .slides */ 
 }
 .content-txt h1{ /*judul (jam operasional)*/
   font-family:Intro;
@@ -100,126 +100,110 @@
   margin-left:30px;
 }
 
-/*Switch 
-.switch{
-  width:120px;
-  height:10px;
-  position:absolute;
-  bottom:50px;
-  z-index:99;
-  left:30px;
-}
-.switch > ul{
-  list-style:none;
-}
-.switch > ul > li{
-  width:10px;
-  height:10px;
-  border-radius:50%;
-  background:#333;
-  float:left;
-  margin-right:5px;
-  cursor:pointer;
-}
-.switch ul{
-  overflow:hidden;
-}
-.on{
-  width:100%;
-  height:100%;
-  border-radius:50%;
-  background:#f39c12;
-  position:relative;
-  -webkit-animation:on 30s infinite;
-  -moz-animation:on 30s infinite;
-  animation:on 30s infinite;
-} */
-
 /*Animasi kotak miring*/
 @-webkit-keyframes slide{
   0%,100%{
     margin-left:0%;
   }
-  21%{
+  16%{
     margin-left:0%;
   }
-  25%{
+  20%{
     margin-left:-100%;
   }
-  46%{
+  36%{
     margin-left:-100%;
   }
-  50%{
+  40%{
     margin-left:-200%;
   }
-  71%{
+  56%{
     margin-left:-200%;
   }
-  75%{
+  60%{
     margin-left:-300%;
+  }
+  76%{
+    margin-left:-300%;
+  }
+  80%{
+    margin-left:-400%;
   }
   96%{
-    margin-left:-300%;
-  }
+    margin-left:-400%;  
 }
 @-moz-keyframes slide{
   0%,100%{
     margin-left:0%;
   }
-  21%{
+  16%{
     margin-left:0%;
   }
-  25%{
+  20%{
     margin-left:-100%;
   }
-  46%{
+  36%{
     margin-left:-100%;
   }
-  50%{
+  40%{
     margin-left:-200%;
   }
-  71%{
+  56%{
     margin-left:-200%;
   }
-  75%{
+  60%{
     margin-left:-300%;
+  }
+  76%{
+    margin-left:-300%;
+  }
+  80%{
+    margin-left:-400%;
   }
   96%{
-    margin-left:-300%;
+    margin-left:-400%;
   }
 }
 @keyframes slide{
   0%,100%{
     margin-left:0%;
   }
-  21%{
+  16%{
     margin-left:0%;
   }
-  25%{
+  20%{
     margin-left:-100%;
   }
-  46%{
+  36%{
     margin-left:-100%;
   }
-  50%{
+  40%{
     margin-left:-200%;
   }
-  71%{
+  56%{
     margin-left:-200%;
   }
-  75%{
+  60%{
     margin-left:-300%;
+  }
+  76%{
+    margin-left:-300%;
+  }
+  80%{
+    margin-left:-400%;
   }
   96%{
-    margin-left:-300%;
+    margin-left:-400%;
   }
 }
 
-/* Tulisan bergerak dari kanan ke kiri, mumet ilangi wae, lossssss ke coy*/
+/* Tulisan bergerak dari kanan ke kiri, mumet ilangi wae, lossssss ke coy */
+/*ubah angka 500px sampai pas tertutup ke kirinya*/
 
-@-webkit-keyframes content-s{ /* ubah angka 500px sampai pas tertutup ke kirinya*/
+/*@-webkit-keyframes content-s{  
   0%{left:-500px;}
   10%{left:0px;}
+  20%{left:0px;}
   30%{left:0px;}
   40%{left:0px;}
   50%{left:0px;}
@@ -232,6 +216,7 @@
 @-moz-keyframes content-s{
   0%{left:-500px;}
   10%{left:0px;}
+  20%{left:0px;}
   30%{left:0px;}
   40%{left:0px;}
   50%{left:0px;}
@@ -244,41 +229,47 @@
 @keyframes content-s{
   0%{left:-500px;}
   10%{left:40px;}
-  15%{left:0px;}
+  20%{left:0px;}
   30%{left:0px;}
   40%{left:0px;}
   50%{left:0px;}
   60%{left:0px;}
-  70%{left:0;}
+  70%{left:0px;}
   80%{left:-500px;}
   90%{left:-500px;}
   100%{left:-500px;}
-}
+} */
 
 @-webkit-keyframes on{
   0%,100%{
     margin-left:0%;
   }
-  21%{
+  16%{
     margin-left:0%;
   }
-  25%{
+  20%{
     margin-left:20px;
   }
-  46%{
+  36%{
     margin-left:20px;
   }
-  50%{
+  40%{
     margin-left:40px;
   }
-  71%{
+  56%{
     margin-left:40px;
   }
-  75%{
+  60%{
     margin-left:60px;
+  }
+  76%{
+    margin-left:60px;
+  }
+  80%{
+    margin-left:80px;
   }
   96%{
-    margin-left:60px;
+    margin-left:80px;
   }
 }
 
@@ -286,26 +277,32 @@
   0%,100%{
     margin-left:0%;
   }
-  21%{
+  16%{
     margin-left:0%;
   }
-  25%{
+  20%{
     margin-left:20px;
   }
-  46%{
+  36%{
     margin-left:20px;
   }
-  50%{
+  40%{
     margin-left:40px;
   }
-  71%{
+  56%{
     margin-left:40px;
   }
-  75%{
+  60%{
     margin-left:60px;
+  }
+  76%{
+    margin-left:60px;
+  }
+  80%{
+    margin-left:80px;
   }
   96%{
-    margin-left:60px;
+    margin-left:80px;
   }
 }
 
@@ -313,25 +310,31 @@
   0%,100%{
     margin-left:0%;
   }
-  21%{
+  16%{
     margin-left:0%;
   }
-  25%{
+  20%{
     margin-left:20px;
   }
-  46%{
+  36%{
     margin-left:20px;
   }
-  50%{
+  40%{
     margin-left:40px;
   }
-  71%{
+  56%{
     margin-left:40px;
   }
-  75%{
+  60%{
     margin-left:60px;
+  }
+  76%{
+    margin-left:60px;
+  }
+  80%{
+    margin-left:80px;
   }
   96%{
-    margin-left:60px;
+    margin-left:80px;
   }
 }
